fix(CodeMirror): 🐛 override default dark mode color
Citizen defines its own highlight color already.

Closes: #1001

--- a/resources/mixins.less
+++ b/resources/mixins.less
@@ -111,6 +111,22 @@
 	}
 }
 
+.mixin-citizen-css-theme-clientpref-all( @prop, @value ) {
+	@{prop}: @value;
+
+	@media screen {
+		html.skin-theme-clientpref-night & {
+			@{prop}: @value;
+		}
+	}
+
+	@media screen and ( prefers-color-scheme: dark ) {
+		html.skin-theme-clientpref-os & {
+			@{prop}: @value;
+		}
+	}
+}
+
 // Transform black into given color
 // From https://stackoverflow.com/a/73390109/10624167
 .recolor(@color ) {
